saves/test/demo_full_20240802_193545/ece241_2014_q1c/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp ece241_2014_q1c_tb.v ece241_2014_q1c.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
ece241_2014_q1c_tb.v:89: $finish called at 10000 (1ps)

iverilog cmd 2 error:

